--- a/package.json
+++ b/package.json
@@ -27,5 +27,5 @@
   "bugs": {
     "url": "https://github.com/deepak-glad/token_generator/issues"
   },
-  "homepage": "https://github.com/deepak-glad/token_generator#readme"
+  "homepage": "https://github.com/deepak-glad/token_generator/generatetoken"
 }
