--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     "type": "git",
     "url": "git+https://github.com/deepak-glad/token_generator.git"
   },
+  "engines": {
+    "node": "14.x"
+  },
   "keywords": [
     "test"
   ],
   "bugs": {
     "url": "https://github.com/deepak-glad/token_generator/issues"
   },
-  "homepage": "https://github.com/deepak-glad/token_generator/generatetoken"
+  "homepage": "https://github.com/deepak-glad/token_generator#readme"
 }
